LIMA-149 : fixing justified button goup double border when using a second button group for dropdown inside

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -6813,6 +6813,7 @@ button.close {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
+  background-clip: border-box;
 }
 @media \0screen {
   .btn-group > .btn {
@@ -6826,11 +6827,25 @@ button.close {
   border-color: #4f8b00;
   color: #ffffff;
 }
+.btn-group.btn-group-justified {
+  /* handling double borders when btn-group use inside btn-group-justified for dropdowns */
+  /*########## START */
+  /* .btn:hover + .btn-group {
+      .btn-default {
+        border-left-color: darken(@btn-default-border, 12%);
+      }
+
+    }*/
+  /*########## END*/
+}
 .btn-group.btn-group-justified .btn {
   border-right-width: 0px;
 }
 .btn-group.btn-group-justified .btn.btn-default:hover + .btn {
   border-left-color: #c2c2c2;
+}
+.btn-group.btn-group-justified .btn.btn-primary:hover + .btn {
+  border-left-color: #4b9200;
 }
 .btn-group.btn-group-justified .btn.btn-warning:hover + .btn {
   border-left-color: #df9c3c;
@@ -6847,6 +6862,30 @@ button.close {
 .btn-group.btn-group-justified .btn:last-of-type {
   border-right-width: 1px;
 }
+.btn-group.btn-group-justified .btn.btn-default:hover + .btn-group .btn {
+  border-left-color: #c2c2c2;
+}
+.btn-group.btn-group-justified .btn.btn-primary:hover + .btn-group .btn {
+  border-left-color: #4b9200;
+}
+.btn-group.btn-group-justified .btn.btn-warning:hover + .btn-group .btn {
+  border-left-color: #df9c3c;
+}
+.btn-group.btn-group-justified .btn.btn-danger:hover + .btn-group .btn {
+  border-left-color: #cb3d2a;
+}
+.btn-group.btn-group-justified .btn.btn-info:hover + .btn-group .btn {
+  border-left-color: #84a2ab;
+}
+.btn-group.btn-group-justified .btn.btn-success:hover + .btn-group .btn {
+  border-left-color: #4b9200;
+}
+.btn-group.btn-group-justified .btn-group:not(:last-child) .dropdown-toggle {
+  border-right: 0;
+}
+.btn-group.btn-group-justified .btn-group:hover + .btn {
+  border-left-color: #c2c2c2;
+}
 .btn-group.open .dropdown-toggle.btn-link {
   background: #f1f1f1;
 }
@@ -6860,6 +6899,7 @@ button.close {
   min-width: 200px;
   padding: 8px 0;
   margin-top: 0;
+  background-clip: border-box;
 }
 .dropdown-menu > li > a {
   text-transform: none;
