--- a/src/css/less/bootstrap/rules/buttons.less
+++ b/src/css/less/bootstrap/rules/buttons.less
@@ -174,6 +174,7 @@
   
   > .btn{
     .border-radius(@border-radius-base);
+    background-clip: border-box;
     
    &.active{
       background-color: @brand-primary;
@@ -190,6 +191,11 @@
       &.btn-default{
         &:hover + .btn{
           border-left-color: darken(@btn-default-border, 12%);
+        }
+      }
+      &.btn-primary{
+        &:hover + .btn{
+          border-left-color: @ls-btn-primary - 18%;
         }
       }
       &.btn-warning{
@@ -216,7 +222,53 @@
       &:last-of-type{
         border-right-width: 1px;
       }
+
+
+
+
+
     }
+
+    /* handling double borders when btn-group use inside btn-group-justified for dropdowns */
+    /*########## START */
+
+   /* .btn:hover + .btn-group {
+      .btn-default {
+        border-left-color: darken(@btn-default-border, 12%);
+      }
+
+    }*/
+
+    .btn {
+      &.btn-default:hover + .btn-group .btn {
+        border-left-color: darken(@btn-default-border, 12%);
+      }
+      &.btn-primary:hover + .btn-group .btn{
+        border-left-color: @ls-btn-primary - 18%;
+      }
+      &.btn-warning:hover + .btn-group .btn{
+          border-left-color: @ls-btn-warning - 18%;
+      }
+      &.btn-danger:hover + .btn-group .btn{
+          border-left-color: @ls-btn-danger - 18%;
+      }
+      &.btn-info:hover + .btn-group .btn{
+          border-left-color: @ls-btn-info - 18%;
+      }
+      &.btn-success:hover + .btn-group .btn{
+          border-left-color: @brand-primary - 18%;
+      }
+    }
+
+    .btn-group:not(:last-child) .dropdown-toggle {
+      border-right: 0;
+    }
+
+    .btn-group:hover + .btn {
+      border-left-color: darken(@btn-default-border, 12%);
+    }
+
+    /*########## END*/
+
   }
 }
-
