--- a/src/css/less/bootstrap/rules/dropdown.less
+++ b/src/css/less/bootstrap/rules/dropdown.less
@@ -5,7 +5,8 @@
   .box-shadow( 0px 3px 5px 0px rgba(0,0,0,0.08) );
   min-width: 200px;
   padding: 8px 0;
-  margin-top: 0; 
+  margin-top: 0;
+  background-clip: border-box;
   
   > li{
     > a{
